# Deep-Learning

./: .gitignore
clip-reproduction/: .gitignore  README.md  pyproject.toml  run_slurm.sh
clip-reproduction/conf/: eval_linear_probe_conf.yaml  train_conf.yaml
clip-reproduction/logs/: train.py_139.out  uv_131.err  uv_131.out  uv_132.out  uv_133.out  uv_134.out  uv_135.out  uv_136.out  uv_137.out  uv_138.out  uv_140.out
clip-reproduction/logs/probing/cifar10/.hydra/: config.yaml  hydra.yaml
clip-reproduction/logs/probing/cifar10/openai_clip/: result.csv
clip-reproduction/logs/probing/cifar10/openai_clip/.hydra/: config.yaml  hydra.yaml  overrides.yaml
clip-reproduction/logs/probing/cifar10/resnet50/: result.csv
clip-reproduction/logs/probing/cifar100/.hydra/: config.yaml  hydra.yaml  overrides.yaml
clip-reproduction/logs/probing/cifar100/openai_clip/: result.csv
clip-reproduction/logs/probing/cifar100/resnet50/: result.csv
clip-reproduction/logs/probing/eurosat/openai_clip/: result.csv
clip-reproduction/logs/probing/eurosat/resnet50/: result.csv
clip-reproduction/logs/probing/food101/openai_clip/: result.csv
clip-reproduction/logs/probing/food101/resnet50/: result.csv
clip-reproduction/logs/probing/mnist/openai_clip/: result.csv
clip-reproduction/logs/probing/mnist/resnet50/: result.csv
clip-reproduction/notebooks/: probing.ipynb
clip-reproduction/scripts/: eval_clip_linear_probe.py  eval_linear_probe.py  eval_openai_clip.py  train.py  train_clip_molecule.py
clip-reproduction/src/clip_reproduction/: __init__.py  datasets.py  training.py  utils.py
clip-reproduction/src/clip_reproduction/models/: clip.py  factory.py  gcn_graph_encoder.py  sentence_transformer.py  text.py  transformer.py  vision.py
(+40 files in other folders)
